fix: issues with wrong position of mixin

--- a/packages/foundations/scss/icons/include.scss
+++ b/packages/foundations/scss/icons/include.scss
@@ -76,7 +76,9 @@
 [data-icon-after] {
 	&::after {
 		@extend %icon !optional;
-		@include icon-content(icon-helpers.$default-icon-content-after);
+		@include icon-helpers.icon-content(
+			icon-helpers.$default-icon-content-after
+		);
 		margin-inline-start: icon-helpers.$default-icon-margin-start;
 	}
 }
